First view of Landing Page-Mobile First

--- a/Proyects/Product_Landing_Page/index.html
+++ b/Proyects/Product_Landing_Page/index.html
@@ -5,11 +5,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Landing Page - Free Code Camp</title>
+    <meta name="description" content="This electric fireplace is a perfect combination of cutting-edge technology, consumer-oriented design philosophy, and traditional classic aesthetics."/>
+    <meta name="keywords" content="fireplace, electric, chimmey, heat, cozy, home, discount"/>
+    <meta name="author" content="Selien Yorbandi"/>
+    <meta name="copyright" content="Selien Yorbandi"/>
+    <title>Electric Fireplace 45' - Cozy Heat</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/779db6cf6f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <h1>Próximamente</h1>
+    <div class="wrapper">
+        <nav class="navDesktop">
+            <img src="img/cozyHeat.png" alt="Cozy Heat brand" class="brand">
+            <ul class="navLinks">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Catalog</a></li>
+                <li class="navCallToAction">
+                    <a href="#">Shop Now</a>    
+                </li>
+            </ul>   
+        </nav>
+        <nav class="mobileMenu">
+            <img src="img/cozyHeat.png" alt="Cozy Heat brand" class="brand">
+            <input type="checkbox" id="check">
+            <label for="check" class="bar-btn">
+                <i class="fas fa-bars"></i>
+            </label>
+            <ul class="nav-menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Catalog</a></li>
+                <li class="navCallToAction">
+                    <a href="#">Shop Now</a>    
+                </li>
+            </ul>
+        </nav>
+        <header class="header">
+            <div class="productName">
+                <h1>ELECTRIC FIREPLACE <br> TROY 45''</h1>
+            </div>
+            <p class="productDescription">Cozy Heat your home with this awesome chimmey</p>
+            <img src="img/troy45Alpha.png" alt="Electric Fireplace 45''" class="mainImg">
+        </header>
+        <main class="main">
+            <section class="firstDescription">
+
+            </section>
+        </main>
+    </div>
 </body>
 
 </html>
