First description for Landing Page

--- a/Proyects/Product_Landing_Page/index.html
+++ b/Proyects/Product_Landing_Page/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This electric fireplace is a perfect combination of cutting-edge technology, consumer-oriented design philosophy, and traditional classic aesthetics."/>
-    <meta name="keywords" content="fireplace, electric, chimmey, heat, cozy, home, discount"/>
-    <meta name="author" content="Selien Yorbandi"/>
-    <meta name="copyright" content="Selien Yorbandi"/>
+    <meta name="description"
+        content="This electric fireplace is a perfect combination of cutting-edge technology, consumer-oriented design philosophy, and traditional classic aesthetics." />
+    <meta name="keywords" content="fireplace, electric, chimmey, heat, cozy, home, discount" />
+    <meta name="author" content="Selien Yorbandi" />
+    <meta name="copyright" content="Selien Yorbandi" />
     <title>Electric Fireplace 45' - Cozy Heat</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/779db6cf6f.js" crossorigin="anonymous"></script>
@@ -22,9 +23,9 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Catalog</a></li>
                 <li class="navCallToAction">
-                    <a href="#">Shop Now</a>    
+                    <a href="#">Shop Now</a>
                 </li>
-            </ul>   
+            </ul>
         </nav>
         <nav class="mobileMenu">
             <img src="img/cozyHeat.png" alt="Cozy Heat brand" class="brand">
@@ -36,7 +37,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Catalog</a></li>
                 <li class="navCallToAction">
-                    <a href="#">Shop Now</a>    
+                    <a href="#">Shop Now</a>
                 </li>
             </ul>
         </nav>
@@ -49,7 +50,17 @@
         </header>
         <main class="main">
             <section class="firstDescription">
-
+                <div class="speechBubble">
+                    <p class="speechBubble-text">Give warmth to your home with a high end electric fireplace without
+                        losing the tradicional</p>
+                </div>
+                <div class="firstDescription-img">
+                    <img src="img/electric_fireplace_tan1.jpg" alt="Front view of the Electric Fireplace Troy 45'">
+                </div>
+                <p class="firstDescription-text">
+                    This electric fireplace is a perfect combination of cutting-edge technology, consumer-oriented
+                    design philosophy, and traditional classic aesthetics.
+                </p>
             </section>
         </main>
     </div>
