Corrections, fcc test passed

--- a/Proyects/Technical_Documentation_Page/index.html
+++ b/Proyects/Technical_Documentation_Page/index.html
@@ -31,17 +31,17 @@
                     <li><a href="#comments" class="nav-link">Comments</a></li>
                     <li><a href="#variables" class="nav-link">Variables</a></li>
                     <li><a href="#data_types" class="nav-link">Data Types</a></li>
-                    <li><a href="#type_casting">Type Casting</a></li>
-                    <li><a href="#operators">Operators</a></li>
-                    <li><a href="#strings">Strings</a></li>
-                    <li><a href="#math">Math</a></li>
-                    <li><a href="#booleans">Booleans</a></li>
-                    <li><a href="#if_else">If Else</a></li>
-                    <li><a href="#switch">Switch</a></li>
-                    <li><a href="#while_loop">While</a></li>
-                    <li><a href="#for_loop">For</a></li>
-                    <li><a href="#break_continue">Break /Continue</a></li>
-                    <li><a href="#arrays">Arrays</a></li>
+                    <li><a href="#type_casting" class="nav-link">Type Casting</a></li>
+                    <li><a href="#operators" class="nav-link">Operators</a></li>
+                    <li><a href="#strings" class="nav-link">Strings</a></li>
+                    <li><a href="#math" class="nav-link">Math</a></li>
+                    <li><a href="#booleans" class="nav-link">Booleans</a></li>
+                    <li><a href="#if_else" class="nav-link">If Else</a></li>
+                    <li><a href="#switch" class="nav-link">Switch</a></li>
+                    <li><a href="#while_loop" class="nav-link">While Loop</a></li>
+                    <li><a href="#for_loop" class="nav-link">For Loop</a></li>
+                    <li><a href="#break_/_continue" class="nav-link">Break / Continue</a></li>
+                    <li><a href="#arrays" class="nav-link">Arrays</a></li>
                 </ol>
             </nav>
         </div>
@@ -55,12 +55,12 @@
                 <i class="fas fa-bars"></i>
             </label>
             <ul class="nav-menu">
-                <li><a href="#introduction" class="nav-link">Introduction</a></li>
-                <li><a href="#getting_started" class="nav-link">Getting Started</a></li>
-                <li><a href="#java_sintax" class="nav-link">Java Sintax</a></li>
-                <li><a href="#comments" class="nav-link">Comments</a></li>
-                <li><a href="#variables" class="nav-link">Variables</a></li>
-                <li><a href="#data_types" class="nav-link">Data Types</a></li>
+                <li><a href="#introduction">Introduction</a></li>
+                <li><a href="#getting_started">Getting Started</a></li>
+                <li><a href="#java_sintax">Java Sintax</a></li>
+                <li><a href="#comments">Comments</a></li>
+                <li><a href="#variables">Variables</a></li>
+                <li><a href="#data_types">Data Types</a></li>
                 <li><a href="#type_casting">Type Casting</a></li>
                 <li><a href="#operators">Operators</a></li>
                 <li><a href="#strings">Strings</a></li>
@@ -68,9 +68,9 @@
                 <li><a href="#booleans">Booleans</a></li>
                 <li><a href="#if_else">If Else</a></li>
                 <li><a href="#switch">Switch</a></li>
-                <li><a href="#while_loop">While</a></li>
-                <li><a href="#for_loop">For</a></li>
-                <li><a href="#break_continue">Break /Continue</a></li>
+                <li><a href="#while_loop">While Loop</a></li>
+                <li><a href="#for_loop">For Loop</a></li>
+                <li><a href="#break_/_continue">Break /Continue</a></li>
                 <li><a href="#arrays">Arrays</a></li>
             </ul>
         </nav>
@@ -1148,9 +1148,9 @@
                     You will learn more about conditions in the next chapter.
                 </p>
             </section>
-            <section class="if-else" id="if_else">
+            <section class="if-else main-section" id="if_else">
                 <header>
-                    <h2>If...Else</h2>
+                    <h2>If Else</h2>
                     <hr>
                 </header>
                 <h3>Java Conditions and If Statements</h3>
@@ -1251,7 +1251,7 @@
                     System.<span class="codeField">out</span>.println(result); <br>
                 </code>
             </section>
-            <section class="switch" id="switch">
+            <section class="switch main-section" id="switch">
                 <header>
                     <h2>Switch</h2>
                     <hr>
@@ -1335,7 +1335,7 @@
                     a break.
                 </p>
             </section>
-            <section class="while" id="while">
+            <section class="while main-section" id="while_loop">
                 <header>
                     <h2>While Loop</h2>
                     <hr>
@@ -1386,7 +1386,7 @@
                 <p class="notes">Do not forget to increase the variable used in the condition, otherwise the loop will
                     never end!</p>
             </section>
-            <section class="for" id="for_loop">
+            <section class="for  main-section" id="for_loop">
                 <header>
                     <h2>For Loop</h2>
                     <hr>
@@ -1425,7 +1425,7 @@
                    <span>Note: </span> Don't worry if you don't understand the example above. You will learn more about Arrays in the Java Arrays chapter.
                 </p>
             </section>
-            <section class="break-continue" id="break_continue">
+            <section class="break-continue main-section" id="break_/_continue">
                 <header>
                     <h2>Break / Continue</h2>
                     <hr>
@@ -1465,7 +1465,7 @@
                     }
                 </code>
             </section>
-            <section class="arrays" id="arrays">
+            <section class="arrays main-section" id="arrays">
                 <header>
                     <h2>Arrays</h2>
                     <hr>
