2nd Section Landing Page

--- a/Proyects/Product_Landing_Page/index.html
+++ b/Proyects/Product_Landing_Page/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="wrapper">
-        <nav class="navDesktop">
+        <nav class="navDesktop" id="nav-bar">
             <img src="img/cozyHeat.png" alt="Cozy Heat brand" class="brand">
             <ul class="navLinks">
                 <li><a href="#">Home</a></li>
@@ -41,12 +41,12 @@
                 </li>
             </ul>
         </nav>
-        <header class="header">
+        <header class="header" id="header">
             <div class="productName">
                 <h1>ELECTRIC FIREPLACE <br> TROY 45''</h1>
             </div>
             <p class="productDescription">Cozy Heat your home with this awesome chimmey</p>
-            <img src="img/troy45Alpha.png" alt="Electric Fireplace 45''" class="mainImg">
+            <img src="img/troy45Alpha.png" alt="Electric Fireplace 45''" class="mainImg" id="header-img">
         </header>
         <main class="main">
             <section class="firstDescription">
@@ -61,6 +61,34 @@
                     This electric fireplace is a perfect combination of cutting-edge technology, consumer-oriented
                     design philosophy, and traditional classic aesthetics.
                 </p>
+            </section>
+            <section class="secondDescription">
+                <p class="SecondDescription-text">
+                    Assembly-free packaging, remote control, flickering flame effect, ultra-quiet DC (direct current) blower, and thermal overload stop, and more features will elevate your whole user experience.
+                </p>
+                <div class="speechBubleTriangle"></div>   
+                <div class="speechBubble-down">
+                    <figure class="descriptionIcons">
+                        <img src="img/remote-control-icon-WH.png" alt="Remote Control Icon">
+                        <figcaption>Remote control <br> Included</figcaption>
+                    </figure>
+                    <figure class="descriptionIcons">
+                        <img src="img/thermostatwh.png" alt="Thermostath integrated">
+                        <figcaption>Adjustable Thermostat</figcaption>
+                    </figure>
+                    <figure class="descriptionIcons">
+                        <img src="img/flameWH.png" alt="Flame Without">
+                        <figcaption>Flame works <br> without heat</figcaption>
+                    </figure>
+                    <figure class="descriptionIcons">
+                        <img src="img/teamworkwh.png" alt="Fully Assembled">
+                        <figcaption>Fully Assembled</figcaption>
+                    </figure>
+                    <figure class="descriptionIcons">
+                        <img src="img/plugWh.png" alt="Plug in">
+                        <figcaption>Plug-In</figcaption>
+                    </figure>
+                </div> 
             </section>
         </main>
     </div>
