Variables for Landing Page

--- a/Proyects/Product_Landing_Page/index.html
+++ b/Proyects/Product_Landing_Page/index.html
@@ -63,7 +63,7 @@
                 </p>
             </section>
             <section class="secondDescription">
-                <p class="SecondDescription-text">
+                <p class="secondDescription-text">
                     Assembly-free packaging, remote control, flickering flame effect, ultra-quiet DC (direct current) blower, and thermal overload stop, and more features will elevate your whole user experience.
                 </p>
                 <div class="speechBubleTriangle"></div>   
@@ -89,6 +89,9 @@
                         <figcaption>Plug-In</figcaption>
                     </figure>
                 </div> 
+            </section>
+            <section class="technicalDescription">
+                
             </section>
         </main>
     </div>
