Corrected responsive in low vh

--- a/Proyects/Product_Landing_Page/index.html
+++ b/Proyects/Product_Landing_Page/index.html
@@ -12,6 +12,7 @@
     <meta name="copyright" content="Selien Yorbandi" />
     <title>Electric Fireplace 45' - Cozy Heat</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="shortcut icon" href="img/electricFireplace.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/779db6cf6f.js" crossorigin="anonymous"></script>
 </head>
 
@@ -91,7 +92,7 @@
                 </div> 
             </section>
             <section class="technicalDescription">
-                
+                                    
             </section>
         </main>
     </div>
