Added Social Proof section

--- a/Proyects/Product_Landing_Page/index.html
+++ b/Proyects/Product_Landing_Page/index.html
@@ -116,16 +116,6 @@
                         </ul>
                     </nav>
                 </div>
-                <!-- <nav class="sliderMenu">
-                    <ul class="menu">
-                        <li><a href="#slide1"><img src="img/productPic1TH.jpg" alt=""></a></li>
-                        <li><a href="#slide2"><img src="img/productPic2TH.jpg" alt=""></a></li>
-                        <li><a href="#slide3"><img src="img/productPic3TH.jpg" alt=""></a></li>
-                        <li><a href="#slide4"><img src="img/productPic4TH.jpg" alt=""></a></li>
-                        <li><a href="#slide5"><img src="img/productPic5TH.jpg" alt=""></a></li>
-                        <li><a href="#slide6"><img src="img/productPic6TH.jpg" alt=""></a></li>
-                    </ul>
-                </nav> -->
                 <div class="h2" id="h2Fir">
                     <h2>What's included?</h2>
                     <ul>
@@ -148,8 +138,68 @@
                         <p>20.1'' H x 23.8'' W x 4.7'' D</p>
                     </div>
                 </div>
-
-
+            </section>
+            <section class="socialProof">
+                <div class="speechBubble">
+                    <h3 class="speechBubble-text">
+                        What our costumers say?
+                    </h3>
+                </div>
+                <div class="costumerTestimonials">
+                    <div class="costumerTestimonial">
+                        <div class="costumerPicture">
+                            <img src="img/costumerDaisy.png" alt="Picture of our costumer">
+                        </div>
+                        <h4>Daysy</h4>
+                        <p class="costumerLocation">Seattle, WA</p>
+                        <div class="costumerScore">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p class="costumerQuote">
+                            "Love this fireplace. It added so much charm to the room and makes it so cozy on long winter
+                            nights."
+                        </p>
+                    </div>
+                    <div class="costumerTestimonial">
+                        <div class="costumerPicture">
+                            <img src="img/costumerRick.jpg" alt="Picture of our costumer">
+                        </div>
+                        <h4>Rick</h4>
+                        <p class="costumerLocation">Redford, MI</p>
+                        <div class="costumerScore">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p class="costumerQuote">
+                            "Perfect for my space! It looks great. Well made and warms the room nicely!"
+                        </p>
+                    </div>
+                    <div class="costumerTestimonial">
+                        <div class="costumerPicture">
+                            <img src="img/costumerPaula.jpg" alt="Picture of our costumer">
+                        </div>
+                        <h4>Paula</h4>
+                        <p class="costumerLocation">Eugene, OR</p>
+                        <div class="costumerScore">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p class="costumerQuote">
+                            "Nice! I Like it! It changes the look of my living room. I like that it has a remote. I also
+                            like the tan earth tone colors."
+                        </p>
+                    </div>
+                </div>
 
             </section>
         </main>
