Footer for Landing Page

--- a/Proyects/Product_Landing_Page/index.html
+++ b/Proyects/Product_Landing_Page/index.html
@@ -202,7 +202,48 @@
                 </div>
 
             </section>
+            <!-- <section class="mainCTA">
+
+            </section>
+            <section class="leadsCTA">
+
+            </section> -->
         </main>
+        <footer class="footer">
+            <div class="footerLinks">
+                <section class="aboutUs">
+                    <h3>About Us</h3>
+                    <ul>
+                        <li>About Us</li>
+                        <li>Contact Us</li>
+                        <li>Work with Us</li>
+                        <li class="socialMedia">
+                            <img src="img/facebook.png" alt="Facebook">
+                            <img src="img/instagram.png" alt="Instagram">
+                            <img src="img/whatsapp.png" alt="WhatsApp">
+                            <img src="img/twitter.png" alt="Twitter">
+                        </li>
+                    </ul>
+                </section>
+                <section class="costumerService">
+                    <h3>Costumer Service</h3>
+                    <ul>
+                        <li>My orders</li>
+                        <li>Track My Order</li>
+                        <li>Return Policy</li>
+                        <li>Help Center</li>
+                        <li>Product Recalls</li>
+                    </ul>
+                </section>  
+                <section class="legal">
+                    <h3>Legal</h3>
+                    <ul>
+                        <li>Terms of Use</li>
+                        <li>Privacy Policy</li>
+                    </ul>
+                </section>
+            </div>
+        </footer>
     </div>
 </body>
 
