Copywriting in some sections

--- a/Proyects/Product_Landing_Page/index.html
+++ b/Proyects/Product_Landing_Page/index.html
@@ -46,7 +46,7 @@
             <div class="productName">
                 <h1>ELECTRIC FIREPLACE <br> TROY 45''</h1>
             </div>
-            <p class="productDescription">Cozy Heat your home with this awesome chimmey</p>
+            <p class="productDescription">Heat your home with this cozy chimmey</p>
             <img src="img/troy45Alpha.png" alt="Electric Fireplace 45''" class="mainImg" id="header-img">
         </header>
         <main class="main">
@@ -72,11 +72,11 @@
                 <div class="speechBubble-down">
                     <figure class="descriptionIcons">
                         <img src="img/remote-control-icon-WH.png" alt="Remote Control Icon">
-                        <figcaption>Remote control <br> Included</figcaption>
+                        <figcaption>Remote control <br> included</figcaption>
                     </figure>
                     <figure class="descriptionIcons">
                         <img src="img/thermostatwh.png" alt="Thermostath integrated">
-                        <figcaption>Adjustable Thermostat</figcaption>
+                        <figcaption>Adjustable thermostat</figcaption>
                     </figure>
                     <figure class="descriptionIcons">
                         <img src="img/flameWH.png" alt="Flame Without">
@@ -84,11 +84,11 @@
                     </figure>
                     <figure class="descriptionIcons">
                         <img src="img/teamworkwh.png" alt="Fully Assembled">
-                        <figcaption>Fully Assembled</figcaption>
+                        <figcaption>Fully assembled</figcaption>
                     </figure>
                     <figure class="descriptionIcons">
                         <img src="img/plugWh.png" alt="Plug in">
-                        <figcaption>Plug-In</figcaption>
+                        <figcaption>Plug-in</figcaption>
                     </figure>
                 </div>
             </section>
@@ -117,7 +117,7 @@
                     </nav>
                 </div>
                 <div class="h2" id="h2Fir">
-                    <h2>What's included?</h2>
+                    <h2>What's in the box?</h2>
                     <ul>
                         <li>Fireplace Remote</li>
                         <li>Screen</li>
@@ -128,7 +128,7 @@
                     </ul>
                 </div>
                 <div class="h2" id="h2Sec">
-                    <h2>Weights & Dimensions</h2>
+                    <h2>Weights and dimensions</h2>
                     <div class="contentH2">
                         <h3>Overall</h3>
                         <p>40'' H x 45'' W x 11.5'' D</p>
@@ -142,7 +142,7 @@
             <section class="socialProof">
                 <div class="speechBubble">
                     <h3 class="speechBubble-text">
-                        What our costumers say?
+                        We are not saying it, they are!
                     </h3>
                 </div>
                 <div class="costumerTestimonials">
@@ -160,8 +160,7 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <p class="costumerQuote">
-                            "Love this fireplace. It added so much charm to the room and makes it so cozy on long winter
-                            nights."
+                            “This fireplace looks so realistic we couldn’t be more pleased! The shipping was high-speed. It was definitely a purchase of 10.”
                         </p>
                     </div>
                     <div class="costumerTestimonial">
@@ -178,7 +177,7 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <p class="costumerQuote">
-                            "Perfect for my space! It looks great. Well made and warms the room nicely!"
+                            “Best hit about this? It fits year-round even when it gets warmer without losing the cozy feeling! The dogs approve as well!”
                         </p>
                     </div>
                     <div class="costumerTestimonial">
@@ -195,8 +194,7 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <p class="costumerQuote">
-                            "Nice! I Like it! It changes the look of my living room. I like that it has a remote. I also
-                            like the tan earth tone colors."
+                            “It heats up our kitchen, dining and living space within minutes! It's a one-step process: just unwrap and plug it in!”
                         </p>
                     </div>
                 </div>
@@ -234,12 +232,23 @@
                         <li>Help Center</li>
                         <li>Product Recalls</li>
                     </ul>
-                </section>  
+                </section>
                 <section class="legal">
                     <h3>Legal</h3>
                     <ul>
                         <li>Terms of Use</li>
                         <li>Privacy Policy</li>
+                        <li>Under construction</li>
+                        <li>© 2021 Cozy Heat</li>
+                        <li>by Selien Yorbandi</li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/selien-yorbandi-92a582210/">
+                                <img src="img/linkedIn.png" alt="LinkedIn">
+                            </a>
+                            <a href="https://github.com/selienyorbandi">
+                                <img src="img/github.png" alt="Github">
+                            </a>
+                        </li>
                     </ul>
                 </section>
             </div>
